# personal_agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.gateway  Dockerfile.llmserver  Dockerfile.pwa  Makefile  README.md  docker-compose.cloud.yml  docker-compose.eval.yml  docker-compose.study.yml  docker-compose.test.yml  docker-compose.yml  init_personal_agent_structure.sh  pyproject.toml
.claude/: CLAUDE.md  MODEL_ROUTING_POLICY.md  hookify.sync-env-example.local.md  settings.json
.claude/agents/: deploy-verifier.md  doc-drift-reconciler.md  linear-gate.md  measurement-critic.md  pr-gate-reviewer.md  spec-compliance-reviewer.md
.claude/hooks/: block-direct-main-push.sh  check-forbidden-patterns.sh  check-pytest-lock.sh  deploy-approval-gate.sh  format-python.sh  nudge-discussion-mode.sh  test_block_direct_main_push.sh  test_deploy_approval_gate.sh
.claude/skills/: lifecycle-rules.md
.cursor/: hooks.json
.cursor/hooks/: check-python.sh  notify-imessage.sh  notify-on-stop.sh  notify-reminder.sh  verify-on-stop.sh
.cursor/rules/: agent-planning.mdc  agent-review.mdc  coding-standards.mdc  documentation-quality.mdc  file-organization.mdc  linear-implement-gate.mdc  linear-mcp-usage.mdc  pr-review-standards.mdc  session-orientation.mdc  testing-standards.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  codeql.yml
.remember/: now.md  today-2026-07-24.md
.remember/tmp/: last-ndc.ts  last-save-ts  last-save.json
config/: artifact_lib_manifest.json  artifact_lib_substitution_map.json  deployment.yaml  gateway_access.yaml  model_roles.yaml  models-baseline.yaml  models.benchmark-4b-f16.yaml  models.benchmark-4b.yaml  models.benchmark-8b.yaml  models.cloud.yaml  models.eval.yaml  models.medium.yaml  models.yaml  substrate.yaml
config/cloud-sim/: Caddyfile
config/governance/: budget.yaml  models.yaml  modes.yaml  safety.yaml  tools.yaml  tools.yaml.backup
config/kibana/: import_dashboards.sh  setup_dashboards.py
config/profiles/: cloud.yaml  local.yaml
config/searxng/: settings.yml
docker/elasticsearch/: captains-captures-index-template.json  captains-funnel-events-index-template.json  captains-index-template.json  captains-reflections-index-template.json  captains-subagents-index-template.json  ilm-policy.json  index-template.json  insights-ilm-policy.json  insights-index-template.json  monitors-cache-reset-cadence-index-template.json  monitors-joinability-ilm-policy.json  monitors-joinability-index-template.json  monitors-joinability-substrate-index-template.json  monitors-projector-health-index-template.json  monitors-slm-health-ilm-policy.json  monitors-slm-health-index-template.json  slm-requests-index-template.json  topology-index-template.json  user-turn-ratings-ilm-policy.json  user-turn-ratings-index-template.json
docker/kibana/: kibana.yml
docker/mcp/: mcp-secrets.env.example  run-gateway.sh
docker/postgres/: init.sql
docker/sandbox/: Dockerfile.python  README.md
docker/searxng/: limiter.toml  settings.yml
docs/: AGENT_MD_STRATEGY.md  CODING_CONVENTIONS.md  DATA_LIFECYCLE.md  ENTITY_EXTRACTION_MODELS.md  GPU_METRICS_SETUP.md  KIBANA_DASHBOARDS.md  MACMON_GPU_METRICS.md  PROJECT_DIRECTORY_STRUCTURE.md  README.md  USAGE_GUIDE.md  VISION_DOC.md
docs/architecture/: 2026-05-08-fre-214-vps-topology-audit.md  BRAINSTEM_SERVICE_v0.1.md  COGNITIVE_AGENT_ARCHITECTURE_v0.1.md  CONTROL_LOOPS_SENSORS_v0.1.md  FEEDBACK_STREAM_ARCHITECTURE.md  HOMEOSTASIS_MODEL.md  HUMAN_SYSTEMS_MAPPING.md  INSPIRATION_production_grade_system.md  INTELLIGENT_ROUTING_PATTERNS_v0.1.md  LOCAL_LLM_CLIENT_SPEC_v0.1.md  ORCHESTRATOR_CORE_SPEC_v0.1.md  README.md  REQUEST_MONITOR_ORCHESTRATOR_INTEGRATION_v0.1.md  REQUEST_MONITOR_SPEC_v0.1.md  ROUTER_SELF_TUNING_ARCHITECTURE_v0.1.md  SYSTEM_HEALTH_MONITORING_DATA_STRUCTURES_v0.1.md  TOOL_EXECUTION_VALIDATION_SPEC_v0.1.md  (+2 more)
docs/guides/: AGENTS.md  (+18 more)
functional-spec/: functional_spec_v0.1.md
governance/: README.md
plans/: review-docs-research-fre-254-step-count-abstract-torvalds.md
scripts/: README.md  backfill_participated_in.py  build_e2e_artifact_fixtures.py  check_config.py  check_identity_threaded.py  check_no_deployment_identifier.py  check_no_direct_substrate_in_tests.py  check_no_personal_paths.py  cleanup_eval_data.py  eval_03_memory_promotion.py  eval_04_context_budget.py  eval_04b_occupancy_curve.py  graphiti_experiment.py  identity_threading_allowlist.yaml  init-services.sh  migrate_fre229_visibility_backfill.py  migrate_fre268_add_user_identity.py  migrate_fre632_unify_owner_identity.py  migrate_fre757_backfill_default_rating.py  migrate_fre772_entity_type_v2.py  migrate_fre865_entity_class_backfill.py  next_adr.py  pr_gate.py  reconcile_board.py  reindex-agent-logs.sh  render_prompt_corpus.py  replay_sessions_to_neo4j.py  setup-elasticsearch.sh  sweep_fre868_evict_system_entities.py  verify_adr0124_amendment_b_no_retired_values.py  verify_artifact_envelope.py  verify_docs_links.py
seshat-pwa/: .eslintrc.json  .gitignore  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vitest.config.ts
tests/: AGENTS.md  RUNTIME_TEST_RESULTS.md  conftest.py  test_cleanup_eval_data.py  test_substrate_isolation.py
tools/: TEST_SLM_SERVER.md  TOOLS_OVERVIEW.md  test_slm_server.sh
(+2267 files in other folders)
